; ModuleID = '/home/carl/AnghaBench/systemd/src/basic/extr_mkdir-label.c_mkdir_label.c'
source_filename = "/home/carl/AnghaBench/systemd/src/basic/extr_mkdir-label.c_mkdir_label.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@S_IFDIR = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @mkdir_label(i8* %0, i32 %1) #0 {
  %3 = alloca i32, align 4
  %4 = alloca i8*, align 8
  %5 = alloca i32, align 4
  %6 = alloca i32, align 4
  store i8* %0, i8** %4, align 8
  store i32 %1, i32* %5, align 4
  %7 = load i8*, i8** %4, align 8
  %8 = call i32 @assert(i8* %7)
  %9 = load i8*, i8** %4, align 8
  %10 = load i32, i32* @S_IFDIR, align 4
  %11 = call i32 @mac_selinux_create_file_prepare(i8* %9, i32 %10)
  store i32 %11, i32* %6, align 4
  %12 = load i32, i32* %6, align 4
  %13 = icmp slt i32 %12, 0
  br i1 %13, label %14, label %16

14:                                               ; preds = %2
  %15 = load i32, i32* %6, align 4
  store i32 %15, i32* %3, align 4
  br label %28

16:                                               ; preds = %2
  %17 = load i8*, i8** %4, align 8
  %18 = load i32, i32* %5, align 4
  %19 = call i32 @mkdir_errno_wrapper(i8* %17, i32 %18)
  store i32 %19, i32* %6, align 4
  %20 = call i32 (...) @mac_selinux_create_file_clear()
  %21 = load i32, i32* %6, align 4
  %22 = icmp slt i32 %21, 0
  br i1 %22, label %23, label %25

23:                                               ; preds = %16
  %24 = load i32, i32* %6, align 4
  store i32 %24, i32* %3, align 4
  br label %28

25:                                               ; preds = %16
  %26 = load i8*, i8** %4, align 8
  %27 = call i32 @mac_smack_fix(i8* %26, i32 0)
  store i32 %27, i32* %3, align 4
  br label %28

28:                                               ; preds = %25, %23, %14
  %29 = load i32, i32* %3, align 4
  ret i32 %29
}

declare dso_local i32 @assert(i8*) #1

declare dso_local i32 @mac_selinux_create_file_prepare(i8*, i32) #1

declare dso_local i32 @mkdir_errno_wrapper(i8*, i32) #1

declare dso_local i32 @mac_selinux_create_file_clear(...) #1

declare dso_local i32 @mac_smack_fix(i8*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
